[package]
name = "remerge"
version = "0.1.0"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.94", features = ["derive"] }
failure = { version = "0.1.5" }
url = "1.7.2"
serde_json = "1.0.39"
log = "0.4.6"
semver = { version = "0.9.0", features = ["serde"] }
lazy_static = "1.3.0"
serde_yaml = "0.8.9"
# it's not clear if we should actually use these deps (they're fine and not
# uncommon or anything, but we could avoid them at the cost of slightly more
# code).
derive_more = "0.15.0"
matches = "0.1.8"
num-traits = "0.2.8"
